--- a/public/static/css/nav.css
+++ b/public/static/css/nav.css
@@ -17,7 +17,7 @@ h1 {
   position: absolute;
   max-width: 740px;
   bottom:0;
-  height: 100px;
+  height: 150px;
   left: 0;
   right: 0;
   margin: 0 auto;
@@ -79,10 +79,15 @@ h1 {
   margin-bottom: 2px;
   top: 160px;
 }
-.accordion ul li div a p {
+.topAccordion ul li div a p {
   top: 160px;
   font-size: 13.5px;
 }
+.bottomAccordion ul li div a p {
+  top: 60px;
+  font-size: 13.5px;
+}
+
 .topAccordion ul li:nth-child(1) {
   background-image: url("https://www.inman.com/wp-content/uploads/2015/10/PeskyMonkey_000007830761_Large.jpg");
   background-size: 650px;
@@ -117,12 +122,12 @@ h1 {
 .bottomAccordion ul li:nth-child(1) {
   background-image: url("https://www.inman.com/wp-content/uploads/2015/10/PeskyMonkey_000007830761_Large.jpg");
   background-size: 650px;
-  background-position: 77% 100%;
+  background-position: 90% 100%;
 }
 .bottomAccordion ul li:nth-child(2) {
   background-image: url("https://bucshon.house.gov/sites/bucshon.house.gov/files/slider_images/Contact-Me.jpg");
   background-size: 650px;
-  background-position: 50% 88%;
+  background-position: 50% 70%;
 }
 
 .accordion ul:hover li {
