--- a/public/static/css/nav.css
+++ b/public/static/css/nav.css
@@ -44,7 +44,7 @@ h1 {
   overflow: hidden;
   width: 100%;
 }
-.accordion ul li div a[href^="#"] {
+.accordion ul li div a {
   display: block;
   height: 250px;
   width: 100%;
@@ -58,7 +58,7 @@ h1 {
   font-family: Open Sans, sans-serif;
   transition: all 200ms ease;
 }
-.accordion ul li div a[href^="#"] * {
+.accordion ul li div a * {
   opacity: 0;
   margin: 0;
   width: 100%;
@@ -136,21 +136,15 @@ h1 {
 .accordion ul:hover li:hover {
   width: 60%;
 }
-.accordion ul:hover li:hover a[href^="#"] {
+.accordion ul:hover li:hover a {
   background: rgba(0, 0, 0, 0.4);
-  cursor:default;
 }
-.accordion ul:hover li:hover a[href^="#"] * {
+.accordion ul:hover li:hover a * {
   opacity: 1;
   -webkit-transform: translateX(0);
   transform: translateX(0);
 }
 
-.accordion ul li div a[href^="#"] a, .accordion ul:hover li:hover a[href^="#"] a{
-  padding: 5px 10px;
-  background-color: rgba(250, 250, 250, 0.8);
-  border-radius: 5px;
-}
 /*@media screen and (max-width: 600px) {
   body {
     margin: 0;
