--- a/public/static/css/nav.css
+++ b/public/static/css/nav.css
@@ -15,9 +15,9 @@ h1 {
 }
 .bottomAccordion{
   position: absolute;
-  max-width: 1080px;
+  max-width: 600px;
   bottom:0;
-  height: 150px;
+  height: 190px;
   left: 0;
   right: 0;
   margin: 0 auto;
@@ -79,12 +79,15 @@ h1 {
   margin-bottom: 2px;
   top: 160px;
 }
+.bottomAccordion ul li div a h2 {
+  top: 100px;
+}
 .topAccordion ul li div a p {
   top: 160px;
   font-size: 13.5px;
 }
 .bottomAccordion ul li div a p {
-  top: 60px;
+  top: 110px;
   font-size: 13.5px;
 }
 
@@ -120,9 +123,9 @@ h1 {
 }
 
 .bottomAccordion ul li:nth-child(1) {
-  background-image: url("https://www.inman.com/wp-content/uploads/2015/10/PeskyMonkey_000007830761_Large.jpg");
+  background-image: url("../img/who.jpg");
   background-size: 650px;
-  background-position: 90% 100%;
+  background-position: 0% 0%;
 }
 .bottomAccordion ul li:nth-child(2) {
   background-image: url("https://bucshon.house.gov/sites/bucshon.house.gov/files/slider_images/Contact-Me.jpg");
