--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -16,9 +16,18 @@ body{
   background-color: white;
   border-radius: 5px;
 }
-.githubContainer{
+.githubContainer, .webstats{
   border-style: solid;
+  width: 400px;
+  height: 200px;
   margin: 30px;
-  padding: 100px;
+}
+.right{
   float: right;
+}
+.left{
+  float: left;
+}
+.emicsContainer{
+  box-sizing: border-box;
 }
