--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -16,18 +16,15 @@ body{
   background-color: white;
   border-radius: 5px;
 }
-.githubContainer, .webstats{
+.githubContainer{
   border-style: solid;
-  width: 400px;
-  height: 200px;
+  width: 250px;
   margin: 30px;
+  padding: 25px;
 }
 .right{
   float: right;
 }
 .left{
   float: left;
-}
-.emicsContainer{
-  box-sizing: border-box;
 }
