--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -18,9 +18,9 @@ body{
 }
 .githubContainer{
   border-style: solid;
-  width: 250px;
-  margin: 30px;
-  padding: 25px;
+  width: 300px;
+  /*margin: 10px;*/
+  /*padding: 15px;*/
 }
 .right{
   float: right;
