--- a/public/static/css/nav.css
+++ b/public/static/css/nav.css
@@ -5,7 +5,10 @@
   width: 100%;
   height: 200px;
   overflow: hidden;
+}
 
+.accordion :focus {
+  outline: none;
 }
 .bottomAccordion{
   position: absolute;
