added more info to sangrianyc page

--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -28,6 +28,10 @@ body{
 .left{
   float: left;
 }
+.indexContainer > div > div{
+  margin: 5px auto;
+}
+
 .indexContainer > div{
   display: flex;
   flex-flow: row wrap;
