--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -19,8 +19,6 @@ body{
 .githubContainer{
   border-style: solid;
   width: 300px;
-  /*margin: 10px;*/
-  /*padding: 15px;*/
 }
 .right{
   float: right;
@@ -28,17 +26,16 @@ body{
 .left{
   float: left;
 }
-.indexContainer > div > div{
-  margin: 5px auto;
+.indexContainer button{
+  cursor:pointer
 }
-
-.indexContainer > div{
+.modalContainer button{
+  cursor:pointer
+}
+.modal-body > div >div{
+  margin: 0 auto;
+}
+.modal-body > div {
   display: flex;
   flex-flow: row wrap;
-}
-.indexContainer a{
-  max-width: 200px;
-}
-.modalContainer > button{
-  cursor:pointer
 }
